--- a/resources/styles/_content.css
+++ b/resources/styles/_content.css
@@ -4,18 +4,11 @@
     .content__head {
 
     }
-        .content__head__breadcrumbs {
-
-        }
 
     .content__body {
         margin: 50px 0 0;
     }
-        .content__body__section {
-            margin: 100px 0 0;
-        }
 
-        .content__body__section:first-child {
-            margin-top: 0;
-        }
-
+    .content__foot {
+        margin: 50px 0 0;
+    }
