--- a/resources/styles/_breadcrumbs.css
+++ b/resources/styles/_breadcrumbs.css
@@ -1,10 +1,13 @@
 .breadcrumbs {
-
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
 }
     .breadcrumbs__item {
-        display: inline-block;
-        position: relative;
         margin: 0 0 0 20px;
+        position: relative;
     }
 
     .breadcrumbs__item:first-child {
@@ -23,6 +26,6 @@
         display: none;
     }
 
-        .breadcrumbs__item__link {
+        .breadcrumbs__link {
             color: #999;
         }
