--- a/resources/styles/_button.css
+++ b/resources/styles/_button.css
@@ -1,13 +1,10 @@
 .button {
-    outline: none;
     white-space: nowrap;
     height: 24px;
-    line-height: 24px;
+    line-height: 22px;
     padding: 0 8px;
     border: 1px solid #0674bc;
-    background: #008ed2;
-    background: -webkit-linear-gradient(#00a7e1, #0095da 50%, #008cd2 50%, #0075c6);
-    background:         linear-gradient(#00a7e1, #0095da 50%, #008cd2 50%, #0075c6);
+    background: #008ed2 linear-gradient(#00a7e1, #0095da 50%, #008cd2 50%, #0075c6);
     border-radius: 4px;
     text-align: center;
     box-shadow: inset 0 0 0 1px rgba(255,255,255,.25);
@@ -19,4 +16,10 @@
 .button:hover {
     background: #008ed2;
     color: #eee;
+}
+
+
+.button_size_larger {
+    height: 30px;
+    line-height: 28px;
 }
