--- a/resources/styles/_form.css
+++ b/resources/styles/_form.css
@@ -1,6 +1,10 @@
 .form {
 
 }
-    .form__row {
+    .form__field {
         margin: 20px 0 0;
+    }
+
+    .form__field:first-child {
+        margin-top: 0;
     }
