--- a/resources/styles/_header.css
+++ b/resources/styles/_header.css
@@ -1,9 +1,19 @@
 .header {
-    height: 100px;
+    border-bottom: 1px solid #ccc;
     position: relative;
 }
-    .header__logo {
-        position: absolute;
-        left: 0;
-        top: 50px;
+    .header__wrap {
+        height: 100px;
+        position: relative;
     }
+        .header__logo {
+            position: absolute;
+            left: 0;
+            top: 10px;
+        }
+
+        .header__search {
+            position: absolute;
+            left: 300px;
+            top: 40px
+        }
