--- a/resources/styles/_page.css
+++ b/resources/styles/_page.css
@@ -1,22 +1,29 @@
 .page {
-
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
     .page__header {
 
     }
 
     .page__nav {
-        margin: 100px 0 0;
+        margin: 40px 0 0;
     }
 
     .page__body {
-        margin: 100px 0 0;
+        margin: 40px 0 0;
+        flex-grow: 1;
+    }
+
+    .page__related {
+        margin: 80px 0 0;
+    }
+
+    .page__partners {
+        margin: 80px 0 0;
     }
 
     .page__footer {
-        margin: 100px 0 0;
-    }
-
-    .page__extra {
-        margin: 100px 0 0;
+        margin: 80px 0 0;
     }
