--- a/resources/styles/_title.css
+++ b/resources/styles/_title.css
@@ -1,9 +1,14 @@
 .title {
+    margin: 0;
     font-size: 18px;
     line-height: 20px;
 }
 
-.title_larger {
+.title_font_larger {
     font-size: 24px;
     line-height: 24px;
+}
+
+.title_uppercase {
+    text-transform: uppercase;
 }
