--- a/resources/styles/_video.css
+++ b/resources/styles/_video.css
@@ -2,9 +2,14 @@
     position: relative;
     width: 100%;
     height: 0;
-    padding: 0 0 56.25%; /*16:9 is default*/
+    padding: 0 0 56.25%; /* 16:9 */
 }
-    .video__iframe {
+
+.video_ration_4x3 {
+    padding-bottom: 75%; /* 4:3 */
+}
+
+    .video__control {
         position: absolute;
         left: 0;
         top: 0;
