--- a/resources/styles/init.css
+++ b/resources/styles/init.css
@@ -21,9 +21,6 @@ input[type="search"] {
 
 html {
     min-width: 1000px;
-    height: 100%;
-    background: #e3e3e3;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 /*
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
@@ -31,6 +28,7 @@ html {
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 */
 }
-    body {
-        height: 100%;
-    }
+   body {
+       background: #f5f2ed url(../images/background.jpg) repeat center top;
+       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+   }
