--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,27 +1,36 @@
-@import url(fonts.css);
 @import url(../vendors/normalize/normalize.css);
+@import url(fonts.css);
+@import url(keyframes.css);
 @import url(init.css);
 
-@import url(_article.css);
-@import url(_body.css);
-@import url(_breadcrumbs.css);
-@import url(_browserupgrade.css);
-@import url(_button.css);
 @import url(_clearfix.css);
-@import url(_content.css);
-@import url(_input.css);
-@import url(_form.css);
-@import url(_jcarousel.css);
-@import url(_footer.css);
+@import url(_page.css);
+@import url(_container.css);
 @import url(_header.css);
-@import url(_icon.css);
-@import url(_link.css);
 @import url(_logo.css);
 @import url(_nav.css);
-@import url(_page.css);
-@import url(_region.css);
+@import url(_footer.css);
+@import url(_main.css);
+@import url(_breadcrumbs.css);
 @import url(_sidebar.css);
-@import url(_table.css);
+@import url(_menu.css);
+@import url(_info.css);
+@import url(_content.css);
+@import url(_article.css);
 @import url(_title.css);
+@import url(_file.css);
+@import url(_form.css);
+@import url(_input.css);
+@import url(_button.css);
+@import url(_partners.css);
+@import url(_related.css);
+@import url(_tiles.css);
+@import url(_item-preview.css);
+@import url(_net.css);
+@import url(_social.css);
+@import url(_link.css);
+@import url(_pagination.css);
+@import url(_browserupgrade.css);
+@import url(_table.css);
 @import url(_video.css);
 @import url(_wysiwyg.css);
