Update initial blocks

--- a/resources/layouts/index.html
+++ b/resources/layouts/index.html
@@ -6,14 +6,11 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- In case of responsive design
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        -->
         <link rel="stylesheet" href="../styles/style.css">
 
     </head>
 
-    <body>
+    <body class="body">
 
         <!--[if IE]>
             <div class="browserupgrade">
