Retina sprite support draft

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -38,6 +38,14 @@
                         <input class="search__field" type="search">
                         <button class="search__submit" type="submit">Search!</button>
                     </form>
+                    <div class="header__channels contacts">
+                        <div class="contacts__item">
+                            <a class="channel channel_via_phone link link_fake" href="tel:+12345678910">+1 (234) 567-89-10</a>
+                        </div>
+                        <div class="contacts__item">
+                            <a class="channel channel_via_email link" href="mailto:info@example.org">info@example.org</a>
+                        </div>
+                    </div>
                 </div>
             </header>
 
