--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -28,6 +28,8 @@
 @import url(_social.css);
 @import url(_link.css);
 @import url(_pagination.css);
+@import url(_contacts.css);
+@import url(_channel.css);
 @import url(_browserupgrade.css);
 @import url(_table.css);
 @import url(_video.css);
