Support for symbol/use sprites was added

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -383,13 +383,19 @@
                     <div class="footer__social">
                         <ul class="tiles tiles_gap_0x10px">
                             <li class="tiles__item">
-                                <a class="net net_id_facebook social__link" href="#">Facebook</a>
+                                <a class="net" href="#">
+                                    <img class="net__icon" id="fuck" width="666" height="13" src="../symbols/net_id_facebook.svg" alt="">
+                                </a>
                             </li>
                             <li class="tiles__item">
-                                <a class="net net_id_foursquare social__link" href="#">Foursquare</a>
+                                <a class="net" href="#">
+                                    <img class="net__icon" src="../symbols/net_id_foursquare.svg" alt="">
+                                </a>
                             </li>
                             <li class="tiles__item">
-                                <a class="net net_id_vkontakte social__link" href="#">VK</a>
+                                <a class="net" href="#">
+                                    <img class="net__icon" src="../symbols/net_id_vkontakte.svg" alt="">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -404,6 +410,7 @@
 
 
         <script src="../vendors/jquery/jquery-2.2.3.min.js"></script>
+        <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
         <script src="../scripts/app.js"></script>
 
 
