--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -344,7 +344,19 @@
             </section>
 
 
-            <section class="partners page__partners">
+            <section class="arrivals page__arrivals">
+                <div class="container arrivals__wrap">
+                    <h2 class="title title_font_larger title_uppercase arrivals__title">New Arrivals in</h2>
+                    <div class="arrivals__body">
+                        <div class="countdown countdown_skin_board" id="new-year">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="collections page__partners">
                 <div class="container partners__wrap">
                     <h2 class="title partners__title">Partners</h2>
                     <ul class="partners__list">
@@ -422,9 +434,20 @@
         </div>
 
 
+        <!-- jQuery -->
         <script src="../vendors/jquery/jquery-3.1.0.min.js"></script>
+
+        <!-- SVG for everybody-->
         <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
+
+        <!-- Magnific popup-->
         <script src="../vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+
+        <!-- jQuery countdown -->
+        <script src="../vendors/jquery.countdown/jquery.plugin.min.js"></script>
+        <script src="../vendors/jquery.countdown/jquery.countdown.min.js"></script>
+        <script src="../vendors/jquery.countdown/jquery.countdown-ru.js"></script>
+
         <script src="../scripts/app.js"></script>
 
 
