--- a/development/styles/_page.css
+++ b/development/styles/_page.css
@@ -24,6 +24,10 @@
         margin: 80px 0 0;
     }
 
+    .arrivals {
+        margin: 80px 0 0;
+    }
+
     .page__footer {
         margin: 80px 0 0;
     }
