--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/style.css?1">
 
     </head>
 
