--- a/development/styles/_channel.css
+++ b/development/styles/_channel.css
@@ -17,19 +17,24 @@
         top: 0;
         display: block;
         background-repeat: no-repeat;
-        background-size: 100%;
     }
 
     .channel_via_phone:before {
-        margin-left: 2px;
-        width: 15px;
+        width: 20px;
         height: 20px;
         background-image: url(../sprites/channel_via_phone.png);
     }
 
     .channel_via_email:before {
-        margin-top: -1px;
         width: 20px;
         height: 20px;
         background-image: url(../sprites/channel_via_email.png);
+    }
+
+
+    @media
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+        .channel_via_phone:before { background-image: url(../sprites/channel_via_phone@2x.png); background-size: 100% 100%; }
+        .channel_via_email:before { background-image: url(../sprites/channel_via_email@2x.png); background-size: 100% 100%; }
     }
