--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/style.css?1">
+        <link rel="stylesheet" href="../styles/style.css">
 
     </head>
 
@@ -448,7 +448,8 @@
         <script src="../vendors/jquery.countdown/jquery.countdown.min.js"></script>
         <script src="../vendors/jquery.countdown/jquery.countdown-ru.js"></script>
 
-        <script src="../scripts/app.js"></script>
+        <!-- Temp -->
+        <script src="../scripts/temp.js"></script>
 
 
     </body>
