--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,7 +1,9 @@
 .body {
     background: #f5f2ed url(../images/background.jpg) repeat center top;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+    font-family: 'Open Sans', sans-serif;
+
     /*
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     font-family: Verdana, Geneva, sans-serif;
