Custom properties and css next was added to gulp workflow

--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -30,6 +30,7 @@
 @import url(_pagination.css);
 @import url(_partners.css);
 @import url(_related.css);
+@import url(_root.css);
 @import url(_sidebar.css);
 @import url(_social.css);
 @import url(_table.css);
