csslint was changed to stylelint

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -397,7 +397,7 @@
                         <ul class="tiles tiles_gap_0x10px">
                             <li class="tiles__item">
                                 <a class="net" href="#">
-                                    <img class="net__icon" id="fuck" width="666" height="13" src="../symbols/net_id_facebook.svg" alt="">
+                                    <img class="net__icon" src="../symbols/net_id_facebook.svg" alt="">
                                 </a>
                             </li>
                             <li class="tiles__item">
