Code style was greatly updated

--- a/development/styles/_article.css
+++ b/development/styles/_article.css
@@ -11,7 +11,7 @@
         .article__note {
             display: block;
             margin: 10px 0 0;
-            color: #ccc;
+            color: #CCCCCC;
         }
 
         .article__preview {
