--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,5 +1,5 @@
 .body {
-    background: #f5f2ed url(../images/background.jpg) repeat center top;
+    background: #F5F2ED url(../images/background.jpg) repeat center top;
     font-family: 'Open Sans', sans-serif;
 
     /*
