--- a/development/styles/_menu.css
+++ b/development/styles/_menu.css
@@ -15,5 +15,5 @@
             display: block;
             padding: 10px;
             text-decoration: none;
-            background: rgba(255,0,0,.2);
+            background: rgba(255, 0, 0, 0.2);
         }
