--- a/development/styles/_pagination.css
+++ b/development/styles/_pagination.css
@@ -15,7 +15,7 @@
         .pagination__link {
             display: block;
             text-decoration: none;
-            background: rgba(255, 0, 0, .2);
+            background: rgba(255, 0, 0, 0.2);
             padding: 0 5px;
             min-width: 40px;
             height: 40px;
@@ -24,11 +24,11 @@
         }
 
         .pagination__link_current {
-            background-color: rgba(255,255,255, .2);
+            background-color: rgba(255, 255, 255, 0.2);
         }
 
         .pagination__link_suspend {
-            color: #000;
+            color: #000000;
             cursor: default;
         }
 
