--- a/development/styles/_browserupgrade.css
+++ b/development/styles/_browserupgrade.css
@@ -1,6 +1,6 @@
 .browserupgrade {
     margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
+    background: #CCCCCC;
+    color: #000000;
     padding: 0.2em 0;
 }
