--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -3,19 +3,19 @@
     height: 24px;
     line-height: 22px;
     padding: 0 8px;
-    border: 1px solid #0674bc;
-    background: #008ed2 linear-gradient(#00a7e1, #0095da 50%, #008cd2 50%, #0075c6);
+    border: 1px solid #0674BC;
+    background: #008ED2 linear-gradient(#00A7E1, #0095DA 50%, #008CD2 50%, #0075C6);
     border-radius: 4px;
     text-align: center;
-    box-shadow: inset 0 0 0 1px rgba(255,255,255,.25);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
     font-size: 12px;
-    color: #fff;
+    color: #FFFFFF;
     cursor: pointer;
 }
 
 .button:hover {
-    background: #008ed2;
-    color: #eee;
+    background: #008ED2;
+    color: #EEEEEE;
 }
 
 
