--- a/development/styles/_channel.css
+++ b/development/styles/_channel.css
@@ -10,7 +10,7 @@
 .channel_via_email {
 
 }
-    .channel:before {
+    .channel::before {
         content: '';
         position: absolute;
         left: 0;
@@ -19,13 +19,13 @@
         background-repeat: no-repeat;
     }
 
-    .channel_via_phone:before {
+    .channel_via_phone::before {
         width: 20px;
         height: 20px;
         background-image: url(../sprites/channel_via_phone.png);
     }
 
-    .channel_via_email:before {
+    .channel_via_email::before {
         width: 20px;
         height: 20px;
         background-image: url(../sprites/channel_via_email.png);
@@ -35,6 +35,6 @@
     @media
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi) {
-        .channel_via_phone:before { background-image: url(../sprites/channel_via_phone@2x.png); background-size: 100% 100%; }
-        .channel_via_email:before { background-image: url(../sprites/channel_via_email@2x.png); background-size: 100% 100%; }
+        .channel_via_phone::before { background-image: url(../sprites/channel_via_phone@2x.png); background-size: 100% 100%; }
+        .channel_via_email::before { background-image: url(../sprites/channel_via_email@2x.png); background-size: 100% 100%; }
     }
