--- a/development/styles/_countdown.css
+++ b/development/styles/_countdown.css
@@ -40,9 +40,9 @@
                     font-weight: 300;
                     font-size: 50px;
                     line-height: 83px;
-                    color: #000;
+                    color: #000000;
                     text-align: center;
-                    letter-spacing: .01em;
+                    letter-spacing: 0.01em;
                 }
 
 
@@ -55,8 +55,8 @@
                 margin-top: 11px;
                 font-size: 15px;
                 line-height: 18px;
-                color: rgba(0,0,0,.5);
+                color: rgba(0, 0, 0, 0.5);
                 text-align: center;
                 text-transform: lowercase;
-                letter-spacing: .01em;
+                letter-spacing: 0.01em;
             }
