--- a/development/styles/_file.css
+++ b/development/styles/_file.css
@@ -19,7 +19,7 @@
 .file_kind_xls {
 
 }
-    .file:before {
+    .file::before {
         content: '';
         position: absolute;
         left: 0;
@@ -30,6 +30,6 @@
         background-repeat: no-repeat;
     }
 
-    .file_kind_doc:before { background-image: url(../sprites/file_kind_doc.png); }
-    .file_kind_pdf:before { background-image: url(../sprites/file_kind_pdf.png); }
-    .file_kind_xls:before { background-image: url(../sprites/file_kind_xls.png); }
+    .file_kind_doc::before { background-image: url(../sprites/file_kind_doc.png); }
+    .file_kind_pdf::before { background-image: url(../sprites/file_kind_pdf.png); }
+    .file_kind_xls::before { background-image: url(../sprites/file_kind_xls.png); }
