--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -14,24 +14,24 @@
     .input__control {
         height: 26px;
         padding: 0 9px;
-        background: #fff;
-        border: 1px solid #c3c3c3;
+        background: #FFFFFF;
+        border: 1px solid #C3C3C3;
         border-radius: 2px;
         font-size: 12px;
-        color: #333;
+        color: #333333;
     }
 
-    .input__control::-webkit-input-placeholder { font-style: normal; opacity: 1; color: #b3b3b3; }
-    .input__control::-moz-placeholder          { font-style: normal; opacity: 1; color: #b3b3b3; }
-    .input__control:-ms-input-placeholder      { font-style: normal; opacity: 1; color: #b3b3b3; }
+    .input__control::-webkit-input-placeholder { font-style: normal; opacity: 1; color: #B3B3B3; }
+    .input__control::-moz-placeholder          { font-style: normal; opacity: 1; color: #B3B3B3; }
+    .input__control:-ms-input-placeholder      { font-style: normal; opacity: 1; color: #B3B3B3; }
 
-    .input__control:hover::-webkit-input-placeholder { color: #7e7e7e; }
-    .input__control:hover::-moz-placeholder          { color: #7e7e7e; }
-    .input__control:hover:-ms-input-placeholder      { color: #7e7e7e; }
+    .input__control:hover::-webkit-input-placeholder { color: #7E7E7E; }
+    .input__control:hover::-moz-placeholder          { color: #7E7E7E; }
+    .input__control:hover:-ms-input-placeholder      { color: #7E7E7E; }
 
-    .input__control:focus::-webkit-input-placeholder { color: #7e7e7e; }
-    .input__control:focus::-moz-placeholder          { color: #7e7e7e; }
-    .input__control:focus:-ms-input-placeholder      { color: #7e7e7e; }
+    .input__control:focus::-webkit-input-placeholder { color: #7E7E7E; }
+    .input__control:focus::-moz-placeholder          { color: #7E7E7E; }
+    .input__control:focus:-ms-input-placeholder      { color: #7E7E7E; }
 
 
     .input_widget_area .input__control {
