--- a/development/styles/_logo.css
+++ b/development/styles/_logo.css
@@ -4,5 +4,5 @@
     height: 80px;
     line-height: 72px;
     text-align: center;
-    background: rgba(255,255,255, .5);
+    background: rgba(255, 255, 255, 0.5);
 }
