--- a/development/styles/_universal.css
+++ b/development/styles/_universal.css
@@ -2,10 +2,10 @@
     box-sizing: border-box;
 }
 
-*:before {
+*::before {
     box-sizing: border-box;
 }
 
-*:after {
+*::after {
     box-sizing: border-box;
 }
