--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -21,6 +21,7 @@
         color: #333333;
     }
 
+    /* stylelint-disable block-opening-brace-space-before */
     .input__control::-webkit-input-placeholder { font-style: normal; opacity: 1; color: #B3B3B3; }
     .input__control::-moz-placeholder          { font-style: normal; opacity: 1; color: #B3B3B3; }
     .input__control:-ms-input-placeholder      { font-style: normal; opacity: 1; color: #B3B3B3; }
@@ -32,7 +33,7 @@
     .input__control:focus::-webkit-input-placeholder { color: #7E7E7E; }
     .input__control:focus::-moz-placeholder          { color: #7E7E7E; }
     .input__control:focus:-ms-input-placeholder      { color: #7E7E7E; }
-
+    /* stylelint-enable */
 
     .input_widget_area .input__control {
         padding-top: 6px;
