--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -1,3 +1,4 @@
+/* stylelint-disable declaration-colon-space-after */
 :root {
     --color_default_primary:    #000000;
     --color_default_secondary:  #222222;
@@ -35,34 +36,35 @@
     --font_weigh_bold:   400;
 
 
-    --font_size_largest-title: 40px;
-    --font_line_largest-title: 46px;
+    --font_size_largest-title:  40px;
+    --font_line_largest-title:  46px;
 
-    --font_size_larger-title: 36px;
-    --font_line_larger-title: 42px;
+    --font_size_larger-title:   36px;
+    --font_line_larger-title:   42px;
 
-    --font_size_default-title: 32px;
-    --font_line_default-title: 38px;
+    --font_size_default-title:  32px;
+    --font_line_default-title:  38px;
 
-    --font_size_smaller-title: 28px;
-    --font_line_smaller-title: 34px;
+    --font_size_smaller-title:  28px;
+    --font_line_smaller-title:  34px;
 
     --font_size_smallest-title: 24px;
     --font_line_smallest-title: 30px;
 
 
-    --font_size_largest-text: 20px;
-    --font_line_largest-text: 24px;
+    --font_size_largest-text:  20px;
+    --font_line_largest-text:  24px;
 
-    --font_size_larger-text:  18px;
-    --font_line_larger-text:  22px;
+    --font_size_larger-text:   18px;
+    --font_line_larger-text:   22px;
 
-    --font_size_default-text: 16px;
-    --font_line_default-text: 20px;
+    --font_size_default-text:  16px;
+    --font_line_default-text:  20px;
 
-    --font_size_smaller-text: 14px;
-    --font_line_smaller-text: 18px;
+    --font_size_smaller-text:  14px;
+    --font_line_smaller-text:  18px;
 
     --font_size_smallest-text: 12px;
     --font_line_smallest-text: 16px;
 }
+/* stylelint-enable declaration-colon-space-after */
