--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,12 +1,10 @@
 .body {
     background: #F5F2ED url(../images/background.jpg) repeat center top;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 
-    /*
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
-    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-    font-family: Tahoma, Verdana, Segoe, sans-serif;
-    font-family: Verdana, Geneva, sans-serif;
-    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    */
+    /*font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;*/
+    /*font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "Tahoma", sans-serif;*/
+    /*font-family: "Tahoma", "Verdana", "Segoe", sans-serif;*/
+    /*font-family: "Verdana", "Geneva", sans-serif;*/
+    /*font-family: "Calibri", "Candara", "Segoe", "Segoe UI", "Optima", "Arial", sans-serif;*/
 }
