Quotes linting was updated

--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,5 +1,5 @@
 .body {
-    background: #F5F2ED url(../images/background.jpg) repeat center top;
+    background: #F5F2ED url("../images/background.jpg") repeat center top;
     font-family: "Open Sans", sans-serif;
 
     /*font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;*/
