--- a/development/styles/_breadcrumbs.css
+++ b/development/styles/_breadcrumbs.css
@@ -15,7 +15,7 @@
     }
 
     .breadcrumbs__item::before {
-        content: '/';
+        content: "/";
         position: absolute;
         right: 100%;
         top: 0;
