--- a/development/styles/_channel.css
+++ b/development/styles/_channel.css
@@ -11,7 +11,7 @@
 
 }
     .channel::before {
-        content: '';
+        content: "";
         position: absolute;
         left: 0;
         top: 0;
@@ -22,19 +22,19 @@
     .channel_via_phone::before {
         width: 20px;
         height: 20px;
-        background-image: url(../sprites/channel_via_phone.png);
+        background-image: url("../sprites/channel_via_phone.png");
     }
 
     .channel_via_email::before {
         width: 20px;
         height: 20px;
-        background-image: url(../sprites/channel_via_email.png);
+        background-image: url("../sprites/channel_via_email.png");
     }
 
 
     @media
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi) {
-        .channel_via_phone::before { background-image: url(../sprites/channel_via_phone@2x.png); background-size: 100% 100%; }
-        .channel_via_email::before { background-image: url(../sprites/channel_via_email@2x.png); background-size: 100% 100%; }
+        .channel_via_phone::before { background-image: url("../sprites/channel_via_phone@2x.png"); background-size: 100% 100%; }
+        .channel_via_email::before { background-image: url("../sprites/channel_via_email@2x.png"); background-size: 100% 100%; }
     }
