--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -15,10 +15,10 @@
         height: 26px;
         padding: 0 9px;
         background: #FFFFFF;
-        border: 1px solid #C3C3C3;
+        border: 1px solid var(--color_default_secondary);
         border-radius: 2px;
         font-size: 12px;
-        color: #333333;
+        color: var(--color_default_primary);
     }
 
     /* stylelint-disable block-opening-brace-space-before */
