--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,10 +1,4 @@
 .body {
     background: #F5F2ED url("../images/background.jpg") repeat center top;
-    font-family: var(--font_family_primary);
-
-    /*font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;*/
-    /*font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "Tahoma", sans-serif;*/
-    /*font-family: "Tahoma", "Verdana", "Segoe", sans-serif;*/
-    /*font-family: "Verdana", "Geneva", sans-serif;*/
-    /*font-family: "Calibri", "Candara", "Segoe", "Segoe UI", "Optima", "Arial", sans-serif;*/
+    font-family: var(--font_family_default);
 }
