--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -1,20 +1,21 @@
 .button {
-    white-space: nowrap;
+    display: inline-block;
+    vertical-align: top;
     height: 24px;
-    line-height: 22px;
+    border: none;
     padding: 0 8px;
-    border: 1px solid #0674BC;
-    background: #008ED2 linear-gradient(#00A7E1, #0095DA 50%, #008CD2 50%, #0075C6);
+    background: var(--color_action_primary);
     border-radius: 4px;
-    text-align: center;
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
     font-size: 12px;
+    line-height: 22px;
     color: #FFFFFF;
+    text-align: center;
+    white-space: nowrap;
     cursor: pointer;
 }
 
 .button:hover {
-    background: #008ED2;
+    background: var(--color_action_secondary);
     color: #EEEEEE;
 }
 
