--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -2,3 +2,7 @@
     background: #F5F2ED url("../images/background.jpg") repeat center top;
     font-family: var(--font_family_default);
 }
+
+.ra {
+    color: red;
+}
