.video was cleaned up

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -160,7 +160,7 @@
                                 <div class="article__gallery">
 
                                     <div class="video">
-                                        <iframe class="video__control" src="//www.youtube.com/embed/P3xKbPooKAo" frameborder="0" allowfullscreen></iframe>
+                                        <iframe class="video__widget" src="//www.youtube.com/embed/P3xKbPooKAo" allowfullscreen></iframe>
                                     </div>
 
                                 </div>
