--- a/development/styles/_video.css
+++ b/development/styles/_video.css
@@ -2,17 +2,23 @@
     position: relative;
     width: 100%;
     height: 0;
-    padding: 0 0 56.25%; /* 16:9 */
+    padding-bottom: 56.25%; /* 16:9 */
+    background-color: #000000;
 }
 
-.video_ration_4x3 {
-    padding-bottom: 75%; /* 4:3 */
+.video_ratio_4x3 {
+    padding-bottom: 75%;
 }
 
-    .video__control {
+.video_ratio_1x1 {
+    padding-bottom: 100%;
+}
+    .video__widget {
         position: absolute;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
+        vertical-align: top;
+        border: none;
     }
