.button compatibility was improved

--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -1,15 +1,16 @@
 .button {
     display: inline-block;
     vertical-align: top;
-    height: 24px;
     border: none;
-    padding: 0 8px;
+    padding: 4px 8px;
     background: var(--color_action_primary);
     border-radius: 4px;
+    font-family: inherit;
     font-size: 12px;
     line-height: 22px;
     color: #FFFFFF;
     text-align: center;
+    text-decoration: none;
     white-space: nowrap;
     cursor: pointer;
 }
