.input selectors was renamed

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -217,13 +217,13 @@
                                 <div class="form__field">
                                     <div class="input">
                                         <label class="input__label" for="temp-a">Label</label>
-                                        <input class="input__control" type="text" placeholder="Input field" id="temp-a">
+                                        <input class="input__widget" type="text" placeholder="Input field" id="temp-a">
                                     </div>
                                 </div>
                                 <div class="form__field">
-                                    <div class="input input_widget_area">
+                                    <div class="input input_type_area">
                                         <label class="input__label" for="temp-b">Label</label>
-                                        <textarea class="input__control" placeholder="Textarea field" id="temp-b"></textarea>
+                                        <textarea class="input__widget" placeholder="Textarea field" id="temp-b"></textarea>
                                     </div>
                                 </div>
                                 <div class="form__field">
