.visuallyhidden was added

--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -38,5 +38,6 @@
 @import url("_title.css");
 @import url("_universal.css");
 @import url("_video.css");
+@import url("_visuallyhidden.css");
 @import url("_window.css");
 @import url("_wysiwyg.css");
