--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -22,6 +22,7 @@
 
 
 .button_size_larger {
-    height: 30px;
-    line-height: 28px;
+    padding: 8px 16px;
+    font-size: 16px;
+    line-height: 20px;
 }
