--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -11,7 +11,7 @@
         padding: 10px 14px;
         background: #FFFFFF;
         border: 1px solid var(--color_text_secondary);
-        box-shadow: none; /* reset iOS default border-radius */
+        background-clip: padding-box; /* reset iOS default shadow */
         border-radius: 0; /* reset iOS default border-radius */
         font-family: inherit;
         font-size: 12px;
