Update index commented lines spacing

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body class="body">
+
         <!--[if IE]>
             <div class="browserupgrade">
                 Вы используете устаревший браузер.
@@ -16,12 +17,14 @@
                 Вам необходимо <a href="http://browsehappy.com/?locale=ru_RU">обновить ваш браузер</a>.
             </div>
         <![endif]-->
+
         <!--[if IE]>
             <div class="browserupgrade">
                 You are using an <strong>outdated</strong> browser.
                 Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
             </div>
         <![endif]-->
+        
         <div class="page">
             <header class="header page__header">
                 <div class="container header__wrap">
@@ -40,11 +43,11 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__item__link" href="#">Index</a>
-                        </li><!--
-                     --><li class="nav__item">
+                        </li>
+                        <li class="nav__item">
                             <a class="nav__item__link" href="#">Catalog</a>
-                        </li><!--
-                     --><li class="nav__item">
+                        </li>
+                        <li class="nav__item">
                             <a class="nav__item__link" href="#">Contacts</a>
                         </li>
                     </ul>
