Clean index and doc files head

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -24,7 +24,7 @@
                 Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
             </div>
         <![endif]-->
-        
+
         <div class="page">
             <header class="header page__header">
                 <div class="container header__wrap">
