Update docs and related blocks layout

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -108,7 +108,7 @@
                             <!-- unique part of a page starts here -->
                             <article class="article">
                                 <header class="article__head">
-                                    <h1 class="title title_font_larger title_uppercase article__title">Article title</h1>
+                                    <h1 class="title title_importance_higher title_uppercase article__title">Article title</h1>
                                     <time class="article__note" datetime="2014-12-31T19:59+04:00">Dec 31, 2014 at 23:59</time>
                                     <img class="article__preview" src="../temp/nature.jpg" width="660" height="439" alt="">
                                 </header>
@@ -310,7 +310,7 @@
             </section>
             <section class="arrivals page__arrivals">
                 <div class="container arrivals__wrap">
-                    <h2 class="title title_font_larger title_uppercase arrivals__title">New Arrivals in</h2>
+                    <h2 class="title title_importance_higher title_uppercase arrivals__title">New Arrivals in</h2>
                     <div class="arrivals__body">
                         <div class="countdown countdown_skin_board" id="new-year">
 
