--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -2,12 +2,12 @@
     display: inline-block;
     vertical-align: top;
     border: none;
-    padding: 4px 8px;
-    background: var(--color_action_primary);
+    padding: 11px 14px;
+    background-color: var(--color_action_primary);
     border-radius: 4px;
     font-family: inherit;
     font-size: 12px;
-    line-height: 22px;
+    line-height: 18px;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
@@ -22,7 +22,7 @@
 
 
 .button_size_larger {
-    padding: 8px 16px;
+    padding: 18px 24px;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 24px;
 }
