--- a/development/styles/_input.css
+++ b/development/styles/_input.css
@@ -3,20 +3,31 @@
 }
     .input__label {
         display: inline-block;
-        margin: 0 0 8px;
+        vertical-align: top;
+        margin-bottom: 4px;
     }
 
     .input__widget {
+        width: 100%;
         height: 40px;
         padding: 10px 14px;
         background: #FFFFFF;
-        border: 1px solid var(--color_text_secondary);
+        border: 1px solid #B3B3B3;
+        outline: none;
         background-clip: padding-box; /* reset iOS default shadow */
         border-radius: 0; /* reset iOS default border-radius */
         font-family: inherit;
         font-size: 12px;
         line-height: 18px;
         color: var(--color_text_primary);
+    }
+
+    .input__widget:hover {
+        border-color: #7E7E7E;
+    }
+
+    .input__widget:focus {
+        border-color: #333333;
     }
 
     /* stylelint-disable block-opening-brace-space-before */
@@ -39,8 +50,6 @@
 }
     .input_type_area .input__widget {
         vertical-align: top;
-        padding-top: 6px;
-        padding-bottom: 6px;
         height: 60px;
         resize: vertical;
     }
