Clean up body styles

--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -1,4 +1,10 @@
 .body {
-    background: #F5F2ED url("../images/background.jpg") repeat center top;
+    background-color: #F5F2ED;
+    background-image: url("../images/background.jpg");
+    background-position: center top;
     font-family: var(--font_family_default);
+    font-weight: var(--font_weight_default);
+    font-size: var(--font_size_default-text);
+    line-height: var(--font_line_default-text);
+    color: var(--color_text_primary);
 }
